--- a/API/package.json
+++ b/API/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "API",
+  "name": "MealBookingApp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0"
+  }
 }
