--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ node_js:
 cache:
   directories:
     - "node_modules"
+before_install: cd ./api
 install:
     - npm install
 script:
     - npm run test
+after_success:
+     npm run coverage
