--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 cache:
   directories:
     - "node_modules"
-before_install: cd ../API
+before_install: cd ./API
 install:
     - npm install
 script:
