--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/index.js",
     "start:dev": "nodemon --exec babel-node ./api/server.js",
     "build": "babel server --out-dir dist",
-    "test": "mocha --compilers js:@babel/register --recursive API/test/*.spec.js"
+    "test": "nyc mocha --compilers js:@babel/register --recursive API/test/*.spec.js",
+    "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
+    "coveralls-coverage": "coveralls < lcov.info",
+    "coverage": "nyc npm test && npm run coveralls-coverage"  
   },
   "keywords": [],
   "author": "",
@@ -26,12 +29,14 @@
     "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "codeclimate-test-reporter": "^0.5.1",
     "coveralls": "^3.0.3",
     "eslint": "^5.14.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "nyc": "^13.3.0"
   }
 }
