--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "node dist/index.js",
     "start:dev": "nodemon --exec babel-node ./api/server.js",
     "build": "babel server --out-dir dist",
-    "test": "nyc mocha --compilers js:@babel/register --recursive API/test/*.spec.js",
+    "test": "nyc mocha --compilers js:@babel/register --recursive API/test/*.spec.js --exit",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
-    "coverage": "nyc npm test && npm run coveralls-coverage"  
+    "coverage": "nyc report --reporter=text-lcov | coveralls"  
   },
   "keywords": [],
   "author": "",
