--- a/API/.env
+++ b/API/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/mealapp
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/xpreschop
