--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,8 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "mealapp",
+    "database": "xpreschop",
     "host": "127.0.0.1",
-    "port": "5432",
     "dialect": "postgres"
   },
   "test": {
