--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "pg": "^7.8.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.43.0",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "swagger": "^0.7.5",
+    "swagger-ui": "^3.21.0",
+    "swagger-ui-dist": "^3.21.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
